# macrocoach

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_QUALITY_REPORT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.streamlit  GITHUB_DESKTOP_GUIDE.md  LICENSE  MANUAL_UPLOAD_COMMANDS.txt  Makefile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  make.ps1  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  setup_github.ps1  setup_github.sh  upload.bat  upload_to_github.ps1
.github/workflows/: ci.yml
scripts/: __init__.py  seed_demo_data.py
src/macrocoach/: __init__.py  main.py
src/macrocoach/agents/: __init__.py  chat_ui_agent.py  meal_gen_agent.py  planner_agent.py  state_store_agent.py
src/macrocoach/connectors/: __init__.py  base.py  healthkit.py
src/macrocoach/core/: __init__.py  context.py  models.py
src/macrocoach/ui/: __init__.py  dashboard.py
src/macrocoach/vision/: __init__.py  plate_recognizer.py
tests/: conftest.py  test_chat_ui_agent.py  test_meal_image_endpoint.py  test_planner_agent.py  test_plate_recognizer.py  test_state_store.py
